# ai-portfolio

./: .gitignore  CLAUDE.md  README.md  ai-portfolio.code-workspace  clone-all.sh  python_primer.py
01-synthetic-data-home-diy/results/: prd_gap_analysis.md
03-fine-tuning-guardrails/: CLAUDE.md  PRD.md  README.md  coverage.json  day1-plan.md  day2-plan.md  day3-plan.md  pyproject.toml
03-fine-tuning-guardrails/data/embeddings/: .gitignore
03-fine-tuning-guardrails/data/evaluation/: data_quality_report.json  data_quality_summary.txt
03-fine-tuning-guardrails/data/raw/: dating_pairs.jsonl  dating_pairs_metadata.json  eval_pairs.jsonl  eval_pairs_metadata.json  generate_dating_pairs.py
03-fine-tuning-guardrails/docs/adr/: adr-001-lora-vs-standard.md  adr-002-qlora-skip.md  adr-003-cosine-similarity-loss.md
03-fine-tuning-guardrails/eval/: baseline_report.html  comparison_report.html  comparison_result.json  false_positive_analysis.txt  finetuned_metrics.json  lora_metrics.json
03-fine-tuning-guardrails/src/: baseline_analysis.py  cli.py  comparison.py  data_evaluator.py  data_loader.py  lora_trainer.py  metrics.py  models.py  post_training_eval.py  trainer.py  visualizations.py
03-fine-tuning-guardrails/tests/: test_baseline_analysis.py  test_cli.py  test_comparison.py  test_data_loader.py  test_evaluator.py  test_lora_trainer.py  test_metrics.py  test_post_training_eval.py  test_trainer.py  test_visualizations.py
03-fine-tuning-guardrails/training/: lora_training_info.json  standard_training_info.json
04-resume-coach/: README.md
(+10 files in other folders)
