[project]
name = "fine-tuning-guardrails"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "sentence-transformers>=3.0",
    "torch>=2.0",
    "peft>=0.12",
    "umap-learn>=0.5",
    "hdbscan>=0.8",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.18",
    "pydantic>=2.5",
    "click>=8.1",
    "rich>=13.0",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
